# Hackathon-tech-europe-2026

./: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
data/context/: ai_player_lines.jsonl  visual_asset_prompts.jsonl
data/gameforge_ft_v1/: INTEGRATION_NOTES.md  LAUNCH_PLAN.md  README.md  SYSTEM_PROMPT_ARTIFACT_PACKAGE.txt  allowed_emotion_tags.json  eval_artifact_package_messages.jsonl  eval_artifact_package_messages_v2.jsonl  eval_artifact_package_messages_v3.jsonl  smoke_tests_artifact_package_v1.json  train_artifact_package_messages.jsonl  train_artifact_package_messages_v2.jsonl  train_artifact_package_messages_v3.jsonl
data/gameforge_v0/: all_normalized.jsonl  eval.jsonl  gliner_ner_canary.jsonl  manifest.json  normalization_map.json  pioneer_qwen_canary.jsonl  pioneer_qwen_canary_prompt_completion.jsonl  pioneer_qwen_eval.jsonl  pioneer_qwen_train.jsonl  train.jsonl
docs/: context-datasets.md  visual-runtime.md  voice-runtime.md  web-input.md
examples/: game_schema_visuals.json  voice_runtime_mock.py
src/: voice-emotion-tags.test.ts  voice-emotion-tags.ts  voice-profiles.ts
src/compiler/: game-packs.ts  guides.ts  llm-provider.test.ts  llm-provider.ts  openai-compiler.test.ts  openai-compiler.ts  package-builder.test.ts  package-builder.ts  pioneer-artifact-enhancer.test.ts  pioneer-artifact-enhancer.ts  schemas.ts  (+4 more)
tests/: test_context_datasets.py  test_fal_gateway.py  test_runtime.py  test_styles.py  test_visual_runtime.py
(+74 files in other folders)
