[project]
name = "gameforge-gradium"
version = "0.1.0"
description = "Minimal Gradium voice layer prototype for GameForge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradium",
    "sounddevice",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
gameforge-voice = "gameforge_gradium.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
