[project]
name = "gameforge-integrations"
version = "0.1.0"
description = "Independent voice and visual integration prototypes for GameForge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fal-client",
    "gradium",
    "sounddevice",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
gameforge-voice = "gameforge_gradium.cli:main"
gameforge-visuals = "gameforge_fal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
